--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "kawniy/klepon",
-    "description": "PHP Framework for Small Project",
+    "description": "Green PHP Framework",
     "type": "project",
     "authors": [
         {
